[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "airoh"
version = "0.1.0"
description = "A lightweight task library for reproducible workflows"
authors = [{ name = "Lune Bellec", email = "lune.bellec@umontreal.ca" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["invoke>=2.0"]

[project.urls]
Homepage = "https://github.com/simexp/airoh"
